--- a/html/scss/utils/_variables.scss
+++ b/html/scss/utils/_variables.scss
@@ -1,7 +1,7 @@
 //font
 $font-size-medium: 600;
 $font-size-regular: 400;
-
+$font-size-light: 300;
 
 //colors
 $base-color: #D3EBEB;
@@ -10,5 +10,6 @@ $orange-color: #EA6C43;
 $white-color: #F8FAFA;
 $light-gray: #DBE2E2;
 $dark-gray: #334242;
+$base-green: #7E9C9B;
 
 
