static files folder created
TODO: add footer

--- a/coursework/mfc/templates/mfc/index.html
+++ b/coursework/mfc/templates/mfc/index.html
@@ -1,8 +1,6 @@
-{% extends 'mfc/blocks/header.html' %}
+{% extends 'mfc/header.html' %}
 
-{%block title %}
+{%block title%}ЯДокументы{% endblock %}
 
-Страница логин
 
-{% endblock %}
-
+{% extends 'mfc/footer.html' %}
