init database, created the template

--- a/coursework/mfc/templates/mfc/footer.html
+++ b/coursework/mfc/templates/mfc/footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,13 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>{% block title %}{% endblock %}</title>
 </head>
+
 <body>
+
+
     <footer class="footer">
-        <img src="../src/image 2.png" alt="Polytech logo">
+        <img src="{% static  " mfc/src/polytech-logo.png" %}" alt="Polytech logo">
         <p class="footer__text--size_large">Курсовая работа второго семестра</p>
         <p class="footer__text--size_small">Ахьямов Артур 211-321 <br> Май 2022 <br>akhyamovmp@gmail.com</p>
     </footer>
-        
 
 </body>
+
 </html>
