--- a/coursework/mfc/templates/mfc/index.html
+++ b/coursework/mfc/templates/mfc/index.html
@@ -2,5 +2,12 @@
 
 {%block title%}ЯДокументы{% endblock %}
 
+{% block content %}
+<div class="">ABOBA</div>
 
-{% extends 'mfc/footer.html' %}
+<div>asd</div>
+<div>asd</div>
+<div>asd</div>
+
+
+{% endblock %}
