--- a/coursework/mfc/templates/mfc/header.html
+++ b/coursework/mfc/templates/mfc/header.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -6,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="/static/css/mfc/styles.css">
+    <link rel="stylesheet" href="{% static "mfc/css/styles.css" %}" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>{% block title %}{% endblock %}</title>
@@ -14,7 +15,7 @@
 
 <body>
     <header class="header">
-        <div class="logo">
+        <a class="logo" href="{% url 'home' %}">
             <svg class="logo__svg" width="44" height="45" viewBox="0 0 44 45" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <rect width="44" height="44" rx="4" fill="#F8FAFA" />
@@ -87,7 +88,7 @@
                 </defs>
             </svg>
             <span class="logo__text">Документы</span>
-        </div>
+        </a>
 
 
         <div class="header__right-wrapper">
@@ -231,6 +232,16 @@
     </div>
 
 
+    {% block content%}
+
+    {% endblock %}
+
+
+    <footer class="footer">
+        <img src="{% static "mfc/src/polytech-logo.png" %}" alt="Polytech logo">
+        <p class="footer__text--size_large">Курсовая работа второго семестра</p>
+        <p class="footer__text--size_small">Ахьямов Артур 211-321 <br> Май 2022 <br>akhyamovmp@gmail.com</p>
+    </footer>
 </body>
 
 </html>
