login page is done, some changes in project's strucrture

--- a/coursework/static/mfc/css/default.css
+++ b/coursework/static/mfc/css/default.css
@@ -480,4 +480,4 @@ html {
   line-height: 22px;
   color: black;
   text-align: center;
-}/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=default.css.map */
