--- a/coursework/static/mfc/css/scss/blocks/_footer.scss
+++ b/coursework/static/mfc/css/scss/blocks/_footer.scss
@@ -7,6 +7,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    //position: absolute;
+    //bottom: 0;
 }
 
 .footer__text--size_large {
