--- a/coursework/static/mfc/css/scss/utils/_variables.scss
+++ b/coursework/static/mfc/css/scss/utils/_variables.scss
@@ -1,4 +1,5 @@
 //font
+$font-size-bold: 700;
 $font-size-medium: 600;
 $font-size-regular: 400;
 $font-size-light: 300;
@@ -11,5 +12,6 @@ $white-color: #F8FAFA;
 $light-gray: #DBE2E2;
 $dark-gray: #334242;
 $base-green: #7E9C9B;
-
+$base-color-modified: #D3E8E8;
+$font-gray: #393939;
 
