--- a/coursework/mfc/templates/mfc/index.html
+++ b/coursework/mfc/templates/mfc/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <title>Документы</title>
+    <title>ЯДокументы</title>
 </head>
 
 <body>
@@ -199,7 +199,8 @@
                 <input id="password" class="form__input" type="password" placeholder="Пароль">
             </label>
 
-            <button class="form__submit-button" type="submit">Sign In</button>
+            <!-- <button class="form__submit-button" type="submit">Sign In</button>-->
+            <a href="{% url 'home' %}" class="form__submit-button">Sign In</a>
         </form>
     </div>
 
