--- a/coursework/mfc/templates/mfc/template.html
+++ b/coursework/mfc/templates/mfc/template.html
@@ -130,7 +130,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="{% url 'certificates' %}" class="nav-link">
                         <svg class="nav-svg" width="26" height="26" viewBox="0 0 26 26" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
