login form connected to db
TODO: input's "required" fields errors

--- a/coursework/mfc/templates/mfc/home.html
+++ b/coursework/mfc/templates/mfc/home.html
@@ -4,6 +4,31 @@
 
 {% block content %}
 
+<section class="main-article">
+    <div class="main-article-wrapper">
+        <img src="" alt="article">
+        <!--Сюда ссылку на фото-->
+        <div class="main-article-text-wrapper">
+            <p class="main-article__article-text">
+                <!--Сюда переменную с текстом-->
+            </p>
+            <a href="#" class="main-article__link">Подробнее</a>
+            <!--ссылка на статью-->
+        </div>
+    </div>
+</section>
 
+<section class="links">
+    <div class="links-wrapper">
+        <ul class="links__links">
+            <links__link-item><a href="" class="links__link"></a></links__link-item>
+            <links__link-item><a href="" class="links__link"></a></links__link-item>
+            <links__link-item><a href="" class="links__link"></a></links__link-item>
+            <links__link-item><a href="" class="links__link"></a></links__link-item>
+            <links__link-item><a href="" class="links__link"></a></links__link-item>
+            <links__link-item><a href="" class="links__link"></a></links__link-item>
+        </ul>
+    </div>
+</section>
 
 {% endblock %}
