--- a/coursework/static/mfc/css/scss/pages-styles/loginpage/_login-form.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/loginpage/_login-form.scss
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    overflow: hidden;
+    //overflow: hidden;
 }
 
 .form-wrapper {
