--- a/coursework/static/mfc/css/scss/pages-styles/loginpage/_login-form.scss
+++ b/coursework/static/mfc/css/scss/pages-styles/loginpage/_login-form.scss
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    //overflow: hidden;
+    overflow: hidden;
 }
 
 .form-wrapper {
@@ -44,6 +44,7 @@
 
     &--type-registration {
         transform: rotate(90deg);
+        display: none;
     }
 }
 
@@ -142,3 +143,7 @@
     margin-left: 0.5rem;
 }
 
+.form-error {
+    margin-top: 1rem;
+    color: utils.$orange-color;
+}
